Most of the pages are designed and select coffee and add to basket

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,11 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error"
-  }
+  },
+  "prettier/prettier": [
+    "error",
+    {
+      "endOfLine": "auto"
+    }
+  ]
 }
